--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,10 @@ bind-key -T prefix Right if-shell "$is_vim" "send-keys C-w Right" "select-pane -
 bind-key -T prefix Up if-shell "$is_vim" "send-keys C-w Up" "select-pane -U"
 bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+##! split window to pane
+bind -T prefix -n | split-window -h
+bind -T prefix -n - split-window -v
+
 bind c new-window -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -24,7 +26,40 @@ set -g default-terminal "screen-256color"
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
 setw -g window-status-style fg=colour255,bg=default
 setw -g window-status-current-style fg=colour255,bg=colour166,bright
-set -g pane-border-style fg=default,bg=default
+
+##! paneのスタイル
+setw -g pane-base-index 1
+set -g pane-active-border-style bg=black,fg=cyan
+set -g pane-border-style bg=black,fg=grey
+# setw -g pane-border-status bottom
+setw -g pane-border-status off
+setw -g pane-border-format '#{pane_current_command} | #{pane_tty} | #{pane_current_path}'
+set -g history-limit 10000
+
+##! shift arrow to switch windows
+bind -T root -n S-Left {
+  # 前のwindowに移動
+  previous-window
+}
+bind -T root -n S-Right {
+  # 次のwindowに移動
+  next-window
+}
+bind -T root -n S-Up {
+  # 左のwindowとスワップする
+  swap-window -d -t :-1
+}
+bind -T root -n S-Down {
+  # 右のwindowとスワップする
+  swap-window -d -t :+1
+}
+
+
+# ネストしたtmuxに対応するため、C-bをunbind
+unbind C-b
+unbind C-p
+unbind C-n
+
 set -g message-style fg=white,bg=black,bright
 set -g status-style fg=colour230,bg=colour22
 
@@ -41,6 +76,15 @@ set -g status-justify left
 set -g status-position top
 
 setw -g mode-keys vi
+
+##! terminalのタイトルを変更
+set -g set-titles on
+set -g set-titles-string "#S @ #H"
+
+# 自動リネームを有効化
+set -g automatic-rename on
+
+
  
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.osx.conf"
 # if-shell "uname | grep -q Linux" "source-file ~/.tmux.linux.conf"
