fix short cut of tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,13 @@ bind-key -T prefix Down if-shell "$is_vim" "send-keys C-w Down" "select-pane -D"
 bind -T prefix -n | split-window -h
 bind -T prefix -n - split-window -v
 
+##! ツリーを選択する
+bind -T root -n C-t { 
+  choose-tree -Zs
+  display "choose tree."
+  resize-window -A
+}
+
 bind c new-window -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
